# fi2b

./: Cargo.toml  LICENSE  README.md
fi2b/: Cargo.toml
fi2b/src/: lib.rs
fi2b/tests/: test.rs
