[package]
authors = ["2A5F <u2a5f@outlook.com>"]
categories = ["rust-patterns", "rendering::data-formats"]
description = "Convert floating point and integer numbers into bytes and put them into an array"
edition = "2021"
license = "MIT"
name = "fi2b"
readme = "../README.md"
repository = "https://github.com/2A5F/fi2b"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = {version = "2.0.48", features = ["full"]}
